Grant module access from addExports/addOpens/addReads properties
A bundled module sometimes needs reflective access its module-info does not
declare (a framework reflecting into it, say). Add three optional
application.properties keys - addExports, addOpens, addReads - the in-bundle
equivalent of the --add-exports / --add-opens / --add-reads command-line
options, applied to the bundled modules through the layer's Controller after it
is built.

Directives within a property are separated by ';' and targets by ','.
addExports/addOpens read 'module/package=target...', addReads reads
'module=target...'; a target is a module name or ALL-UNNAMED (the application's
unnamed module). The source must be a bundled module (the Controller only breaks
encapsulation of modules it defined); targets resolve against the layer, the
boot layer, or the unnamed module. A malformed directive or an unknown
source/target fails fast with a clear message.

Tests use an explicit module that exports nothing: with addExports the class-path
main calls into it (addOpens and addReads ride the same path), and without it the
call fails with IllegalAccessError.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>